# bip

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: build_bip.yaml  coverage.yaml  run_pytest.yaml
src/bip/: __main__.py  __version__.py  cli.py  parse.py  parser_protocol.py
src/bip/common/: __init__.py  bit_manipulation.py  logger.py  numpy_manipulation.py
src/bip/mock_data/: README.md  random_base_set_generator.py  random_job_format_generator.py  random_tango_generator.py  random_vita_extension_generator.py
src/bip/non_vita/: __init__.py  mblb.py
src/bip/plugins/: README.md
src/bip/plugins/juliet/: __init__.py  (+6 more)
src/bip/recorder/: recorder_protocol.py
src/bip/vita/: README.md  __init__.py  class_identifier.py  context_packet.py  extension_command_packet.py  signal_data_packet.py  vrt_packet.py
tests/common/: test_numpy_manipulation.py
tests/juliet/: test_ackR_packet.py  test_data_context_packet.py  test_extension_command_packet.py  test_frame.py  test_parser.py  test_signal_data_packet.py
tests/mikelima/: test_header.py  test_message_data.py  test_packet_data.py  test_parser.py
tests/non_vita/: test_mblb.py
tests/recorder/: test_pqwriter.py
tests/tango/: test_context_packet.py  test_frame.py  test_gps_context_packet.py  test_heartbeat_context_packet.py  test_parser.py  test_signal_data_packet.py
tests/vita/: test_class_identifier.py  test_context_packet.py  test_extension_command_packet.py  test_signal_data_packet.py  test_vita.py  test_vrt_packet.py
(+18 files in other folders)
