[metadata]
name = bip
version = 0.1.0
description = Parse Narrow-scope VITA 49.2 Data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
install_requires =
    numpy==2.0.0
    pandas
    pyarrow==17.0.0
    tqdm
    numba
include_package_data = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bip = bip.cli:main

[options.extras_require]
test = pytest

[tool:pytest]
minversion = 6.0
testpaths =
    tests
